fix: sidebar spacing

--- a/src/styles/core/sidebar.module.css
+++ b/src/styles/core/sidebar.module.css
@@ -31,8 +31,7 @@
 }
 .stickySidebar {
   @apply sticky top-0 !important;
-  @apply overflow-y-scroll;
-  @apply max-h-screen;
+  @apply max-h-screen overflow-y-scroll;
 }
 
 /* Small RIGHT sidebar, with primary content in the large LEFT side */
@@ -58,8 +57,15 @@
   Style the general sections of a sidebar, usually the small sidebar
 */
 .section {
-  @apply w-full py-5 px-5 lg:p-8 space-y-2 !important;
+  @apply w-full py-6 space-y-5 !important;
 }
+.rightSideSmall .section {
+  @apply pl-8;
+}
+.leftSideSmall .section {
+  @apply pr-8;
+}
+
 .section h3 {
   @apply flex items-center;
   @apply text-xl md:text-lg;
@@ -74,7 +80,7 @@
 
 .listing {
   @apply text-gray-600;
-  @apply pl-8 space-y-3;
+  @apply space-y-5;
 }
 .listing li {
   @apply flex items-center;
@@ -87,7 +93,7 @@
 .floatingMenuInner {
   @apply max-h-[80vh];
   @apply overflow-y-scroll;
-  @apply py-3 mx-6 mt-1;
+  @apply p-5 mx-6;
   @apply bg-white border border-gray-300 rounded-md shadow-xl;
   @apply ring-1 ring-black ring-opacity-5 focus:outline-none;
 }
